--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sha256",
   "version": "0.0.0",
   "description": "SHA-256, as small as I can make it",
-  "main": "index.js",
+  "main": "sha256.js",
   "scripts": {
     "test": "grunt test"
   },
@@ -13,6 +13,7 @@
     "grunt": "~0.4.5",
     "mocha": "~1.21.4",
     "grunt-mocha-test": "~0.12.0",
-    "mocha-unfunk-reporter": "~0.4.0"
+    "mocha-unfunk-reporter": "~0.4.0",
+    "grunt-contrib-uglify": "~0.5.1"
   }
 }
