--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sha256",
   "version": "0.0.0",
   "description": "SHA-256, as small as I can make it",
-  "main": "sha256.js",
+  "main": "index.js",
   "scripts": {
     "test": "grunt test"
   },
